@@ -1,3 +1,13 @@
+2009-07-27  Lin Ma  <Lin.Ma@Sun.COM>
+
+	* capplet/capplet-utils.c (capplet_model_1_level_foreach):
+	* capplet/capplet-utils.h:
+	* capplet/nwam_net_conf_panel.c (apply), (ncu_find_gt_name),
+	(foreach_set_group_mode), (set_group_object_group_mode),
+	(update_widgets), (ncu_pri_group_find_iter_gt),
+	(connection_activation_combo_changed_cb): Change the pri group of ncu
+	do things.
+
 2009-07-24  Darren Kenny  <darren.kenny@sun.com>
 
 	* data/Makefile.am, data/nwam-manager.desktop.in.in:
